added comparable and factory tasks

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>stream</module>
         <module>streams</module>
         <module>multithreading</module>
+        <module>factory</module>
+        <module>comparable</module>
     </modules>
 
 
