Add functional-interfaces task

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>multithreading</module>
         <module>factory</module>
         <module>comparable</module>
+        <module>functional-interfaces</module>
     </modules>
 
 
